--- a/README.org
+++ b/README.org
@@ -10,3 +10,32 @@
 [[./doc/ocotillo.png]]
 [[./doc/pcb.png]]
 [[./doc/pcb-back.png]]
+
+** BOM
+I purchased everything from Mouser. Keep in mind these are all SMD components except for the USB connector and fuse. Therefore, extra care is necessary to ensure components are properly soldered. Small sensitive components such as the crystal oscillator cannot endure high temperature of a standard iron. Proceed with caution.
+
+| Reference                                                                                                                                                                                                                                                                | Quantity | Value                    | Footprint                                      | Datasheet                                                                                                                     | SKU                                       | Quoted Part Number   | Order Quantity | Order Price | Min\Mult Order Qty |
+| C1 C2 C3                                                                                                                                                                                                                                                                 |        3 | 0.1uF                    | Capacitor_SMD:C_0805_2012Metric                | Multilayer Ceramic Capacitors MLCC - SMD/SMT Multilayer Ceramic Capacitors MLCC - SMD/SMT .1uF 5% 25V MLCC                    | CC0805JPX7R8BB104                         | 603-CC0805JPX7R8BB10 |              3 | $0.18       | 1\1                |
+| C4                                                                                                                                                                                                                                                                       |        1 | 10uF                     | Capacitor_SMD:C_0805_2012Metric                | Multilayer Ceramic Capacitors MLCC - SMD/SMT Multilayer Ceramic Capacitors MLCC - SMD/SMT 0805 25VDC 10uF 10% AEC-Q200        | CGA4J1X7S1E106K125AC                      | 810-CGA4J1X7S1E106K1 |              1 | $0.58       | 1\1                |
+| C5 C6                                                                                                                                                                                                                                                                    |        2 | 22pF                     | Capacitor_SMD:C_0805_2012Metric                | Multilayer Ceramic Capacitors MLCC - SMD/SMT Multilayer Ceramic Capacitors MLCC - SMD/SMT 25V 22pF C0G 0805 10% Flex AEC-Q200 | C0805X220K3GACAUTO                        | 80-C0805X220K3GAUTO  |              2 | $0.34       | 1\1                |
+| C7                                                                                                                                                                                                                                                                       |        1 | 1uF                      | Capacitor_SMD:C_0805_2012Metric                | Multilayer Ceramic Capacitors MLCC - SMD/SMT Multilayer Ceramic Capacitors MLCC - SMD/SMT 10V 1uF X7R 0805 20% AEC-Q200       | C0805C105M8RACAUTO                        | 80-C0805C105M8RAUTO  |              1 | $0.31       | 1\1                |
+| D1 D2 D4 D5 D6 D7 D8 D9 D10 D11 D13 D14 D15 D16 D17 D19 D20 D21 D22 D24 D25 D26 D27 D29 D30 D31 D32 D34 D35 D36 D37 D38 D40 D41 D42 D43 D45 D46 D47 D48 D50 D51 D52 D53 D55 D56 D57 D58 D59 D61 D62 D63 D64 D65 D67 D68 D69 D70 D73 D74 D76 D78 D79 D80 D81 D82 D85      |       67 | D_Small                  | Diode_SMD:D_SOD-123                            | Diodes - General Purpose, Power, Switching Diodes - General Purpose, Power, Switching 100V Io/150mA                           | 1N4148W-E3-08                             | 78-1N4148W-E3-08     |             67 | $0.15       | 1\1                |
+| D86 D87                                                                                                                                                                                                                                                                  |        2 | 3.6V                     | Diode_SMD:D_SOD-123                            | Zener Diodes Zener Diodes 3.6V 500mW                                                                                          | MMSZ4685T1G                               | 863-MMSZ4685T1G      |              2 | $0.21       | 1\1                |
+| F1                                                                                                                                                                                                                                                                       |        1 | 500mA                    | cftkb:polyfuse_5.1mm                           | Resettable Fuses - PPTC Resettable Fuses - PPTC 60v Max 40Amps Max Hold .50 Trip 1.00                                         | MF-R050                                   | 652-MFR050           |              1 | $0.34       | 1\1                |
+| ISP1                                                                                                                                                                                                                                                                     |        1 | AVR-ISP-6                | cftkb:AVR_ICSP_3x2                             | Headers & Wire Housings Headers & Wire Housings 6P DR VRT UNSHRD HDR TIN OVER NICKEL                                          | 68602-406HLF                              | 649-68602-406HLF     |              1 | $0.24       | 1\1                |
+| MX0 MX1 MX2 MX3 MX4 MX5 MX6 MX7 MX8 MX9 MX10 MX11 MX12 MX14 MX16 MX17 MX18 MX19 MX20 MX21 MX22 MX23 MX24 MX25 MX26 MX27 MX29 MX31 MX32 MX33 MX34 MX35 MX36 MX37 MX38 MX39 MX40 MX41 MX43 MX45 MX46 MX47 MX48 MX49 MX50 MX51 MX52 MX53 MX54 MX56 MX57 MX63 MX64 MX65 MX66 |       55 | 1                        | MX_Alps_Hybrid:MX-1U-NoLED                     |                                                                                                                               | PCB Mount Gateron Switches (5 Legs) Brown |                      |                |             |                    |
+| MX13                                                                                                                                                                                                                                                                     |        1 | 1                        | MX_Alps_Hybrid:MX-2U-NoLED                     |                                                                                                                               | PCB Mount Gateron Switches (5 Legs) Brown |                      |                |             |                    |
+| MX15 MX28                                                                                                                                                                                                                                                                |        2 | 1                        | MX_Alps_Hybrid:MX-1.5U-NoLED                   |                                                                                                                               | PCB Mount Gateron Switches (5 Legs) Brown |                      |                |             |                    |
+| MX30                                                                                                                                                                                                                                                                     |        1 | 1                        | MX_Alps_Hybrid:MX-1.75U                        |                                                                                                                               | PCB Mount Gateron Switches (5 Legs) Brown |                      |                |             |                    |
+| MX42 MX44                                                                                                                                                                                                                                                                |        2 | 1                        | MX_Alps_Hybrid:MX-2.25U-NoLED                  |                                                                                                                               | PCB Mount Gateron Switches (5 Legs) Brown |                      |                |             |                    |
+| MX55                                                                                                                                                                                                                                                                     |        1 | 1                        | MX_Alps_Hybrid:MX-1.75U-NoLED                  |                                                                                                                               | PCB Mount Gateron Switches (5 Legs) Brown |                      |                |             |                    |
+| MX58 MX59 MX60 MX62                                                                                                                                                                                                                                                      |        4 | 1                        | MX_Alps_Hybrid:MX-1.25U-NoLED                  |                                                                                                                               | PCB Mount Gateron Switches (5 Legs) Brown |                      |                |             |                    |
+| MX61                                                                                                                                                                                                                                                                     |        1 | 1                        | MX_Alps_Hybrid:MX-6U-ReversedStabilizers-NoLED |                                                                                                                               | PCB Mount Gateron Switches (5 Legs) Brown |                      |                |             |                    |
+| R1 R2                                                                                                                                                                                                                                                                    |        2 | 75                       | Resistor_SMD:R_0805_2012Metric                 | Thick Film Resistors - SMD Thick Film Resistors - SMD 1/8W 75 Ohm 1%                                                          | GWCR0805-75RFT5                           | 756-GWCR0805-75RFT5  |              2 | $0.10       | 1\1                |
+| R3 R4                                                                                                                                                                                                                                                                    |        2 | 10k                      | Resistor_SMD:R_0805_2012Metric                 | Thick Film Resistors - SMD Thick Film Resistors - SMD 10K ohm 1% 150V General Purpose SMT                                     | WCR0805-10KFI                             | 756-WCR0805-10KFI    |              2 | $0.10       | 1\1                |
+| R5 R6                                                                                                                                                                                                                                                                    |        2 | 5.1k                     | Resistor_SMD:R_0805_2012Metric                 | Thick Film Resistors - SMD Thick Film Resistors - SMD 5.1K 1%                                                                 | CR0805-FX-5101ELF                         | 652-CR0805FX-5101ELF |              2 | $0.10       | 1\1                |
+| R7                                                                                                                                                                                                                                                                       |        1 | 1.5k                     | Resistor_SMD:R_0805_2012Metric                 | Thick Film Resistors - SMD Thick Film Resistors - SMD 1.5K 1%                                                                 | CR0805-FX-1501ELF                         | 652-CR0805FX-1501ELF |              1 | $0.10       | 1\1                |
+| SW1                                                                                                                                                                                                                                                                      |        1 | SW_Push                  | Random Keyboard Parts:SKQGADE010               | Tactile Switches Tactile Switches 5.2x5.2x1.5mm 260gf                                                                         | SKQGADE010                                | 688-SKQGAD           |              1 | $0.46       | 1\1                |
+| U1                                                                                                                                                                                                                                                                       |        1 | ATmega32U4-AU            | Package_QFP:TQFP-44_10x10mm_P0.8mm             | 8-bit Microcontrollers - MCU 8-bit Microcontrollers - MCU AVR USB 32K FLASH INDUSTRIAL                                        | ATmega32U4-AU                             | 556-ATMEGA32U4-AU    |              1 | $4.00       | 1\1                |
+| USB1                                                                                                                                                                                                                                                                     |        1 | USB_C_GCT_USB4085-Type-C | cftkb:USB_C_GCT_USB4085                        | USB Connectors USB Connectors USB 3.1 RECE. CONN. Gen 1                                                                       | 10137061-00021LF                          | 649-10137061-00021LF |              1 | $2.24       | 1\1                |
+| Y1                                                                                                                                                                                                                                                                       |        1 | 16MHz                    | Crystal:Crystal_SMD_3225-4Pin_3.2x2.5mm        | Crystals Crystals CRYSTAL 16MHZ 8PF SMD                                                                                       | NX3225GA-16.000M-STD-CRG-2                | 344-NX3225GA16MCRG2  |              1 | $0.59       | 1\1                |
